--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -59,9 +59,12 @@ img{
     text-decoration: none;
     list-style: none!important;
     line-height: 20px;
-    padding-left: 20px;
 }
 .comparison-error .list-error label{
   font-weight: bold;
   line-height: 20px;
+}
+
+.file_upload{
+  margin-bottom: 10px;
 }
